fix: z-index trade-3 trading-competition

--- a/src/routes/Home/TradeSection/Trade.scss
+++ b/src/routes/Home/TradeSection/Trade.scss
@@ -18,7 +18,7 @@
   justify-content: center;
   width: 100%;
   height: 650px;
-  background-color:  var( --colors-background);
+  background-color: var(--colors-background);
 
   .container-2 {
     display: flex;
@@ -95,7 +95,7 @@
       align-items: center;
 
       & .trade-1 {
-        z-index: 1;
+        z-index: 2;
         @include container2(0, -25px);
         animation-duration: 6000ms;
         animation-delay: 2000ms;
@@ -104,6 +104,7 @@
       }
 
       & .trade-2 {
+        z-index: 1;
         @include container2(0, -15px);
         animation-duration: 7000ms;
         animation-delay: 1000ms;
@@ -112,7 +113,7 @@
       }
 
       & .trade-3 {
-        z-index: -1;
+        z-index: 0;
         @include container2(0, -15px);
         animation-duration: 6000ms;
         animation-name: bitcoin-biscuit;
